--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "http://feeds.feedburner.com/PhysxNoob"
+          feed_list: "https://feeds.feedburner.com/PhysxNoob"
